--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+body {
+    margin: 0; 
+    padding: 0; 
+}
+
 main {
     padding-bottom: 2%;
+    width: 100% !important;
 }
 
 #rowOfCards {
@@ -15,7 +21,7 @@ footer {
 }
 
 #welcomeText {
-    font-size: 48px;
+    font-size: 2em;
     text-align: center;
     padding: 10px;
     animation: fadeIn 2s ease-in;
@@ -24,111 +30,6 @@ footer {
     -o-animation: fadeIn 2s ease-in;
     -ms-animation: fadeIn 2s ease-in;
 }
-
-
-.main-body-light {
-    background-color: #ddd;
-    color: #333;
-}
-.main-body-dark {
-    background-color: #444;
-    color: #ddd;
-}
-
-
-img {
-    border-radius: 12px;
-}
-
-.imageContainer{
-    vertical-align: top;
-    display: inline-block;
-    text-align: center;
-    color: #777;
-}
-
-#meAndAnnie {
-    display: block;
-    height: 400px;
-    width: auto;
-    float: right;
-}
-
-.caption {
-    display: block;
-}
-
-.subHeading {
-    padding: 10px;
-}
-
-.centerText {
-    text-align: center;
-}
-
-.aboutParagraph {
-    text-indent: 25px;
-}
-
-.aboutRow {
-    padding-top: 16px;
-}
-
-.repoButton {
-    padding: 10px;
-}
-
-.socialMediaImagesNoAnimate {
-    position: absolute;
-    opacity: 1;
-}
-
-.socialMediaImages {
-    position: absolute;
-    transform: translateY(100px);
-    transition: .75s all ease;
-    opacity: 0;
-}
-
-.socialMediaImages.active {
-    position: relative;
-    transform: translateY(0);
-    opacity: 1;
-}
-
-.centeredContainer {
-    position: relative;
-    margin-left: -10%;
-    transform: scale(1);
-    transition: 1.2s all ease;
-    text-align: center;
-}
-
-.centeredContainer:hover {
-    transform: scale(1.15);
-}
-
-.socialMediaImagesNoAnimate img {
-    width: 15%;
-    height: auto;
-    border-radius: 50%;
-    padding: 10px;
-}
-
-
-.socialMediaImages img {
-    width: 15%;
-    height: auto;
-    border-radius: 50%;
-    padding: 10px;
-}
-
-
-
-.card {
-    border-radius: 5% !important;
-}
-
 
 
 @keyframes fadeIn {
@@ -158,6 +59,120 @@ img {
 
 
 
+img {
+    border-radius: 12px;
+}
+
+.imageContainer{
+    display: block;
+    float: right;
+}
+
+#meAndAnnie {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.caption {
+    display: block;
+    text-align: center;
+    color: #aaa;
+}
+
+
+
+
+.subHeading {
+    padding: 10px;
+}
+
+.centerText {
+    text-align: center;
+}
+
+.aboutContainer {
+    text-indent: 25px;
+}
+
+.aboutRow {
+    padding: 16px;
+}
+
+
+
+
+
+.repoButton {
+    padding: 10px;
+}
+
+
+
+
+
+.socialMediaImagesRow {
+    padding: 25px;
+}
+
+.socialMediaImagesNoAnimate {
+    position: absolute;
+    opacity: 1;
+}
+
+.socialMediaImages {
+    position: absolute;
+    transform: translateY(100px);
+    transition: .75s all ease;
+    opacity: 0;
+}
+
+.socialMediaImages.active {
+    position: relative;
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.socialMediaImagesMobile {
+    display: table;
+    padding-left: 5px;
+}
+
+
+.centeredContainer {
+    position: relative;
+    transform: scale(.8);
+    transition: 1.2s all ease;
+    text-align: center;
+}
+
+.centeredContainer:hover {
+    transform: scale(1.25);
+}
+
+.socialMediaImagesNoAnimate img {
+    border-radius: 50%;
+    padding: 10px;
+}
+
+
+.socialMediaImages img {
+    width: 80px;
+    height: auto;
+    border-radius: 50%;
+    padding: 10px;
+}
+
+
+
+.card {
+    border-radius: 5% !important;
+}
+
+
+
+
+
 .slideIn {
     position: relative;
     opacity: 0;
@@ -179,17 +194,6 @@ img {
 .moreText.active {
     opacity: 1;
 }
-/*
-.reveal {
-    opacity: 0;
-    transition: 2s all ease;
-}
-
-.reveal.active{
-    opacity: 1;
-}
-*/
-
 
 
 
@@ -256,37 +260,28 @@ input:checked + .slider:before {
 
 /*Coffee cup jumbotron thingy */
 .myJumbotron {
-    height: 400px;
-    position: inherit;
-    transform: translateY(20px);
+    display: block;
+    position: relative;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    width: 98%
 }
 
 .textContainer {
+    display: block;
+    position: absolute;
     overflow: hidden;
 }
 
-.yourJoe{
-    transform: translateY(80px);
-    opacity: 0;
-    animation: yourJoeFrames 1.5s .5s ease forwards;
+
+.textContainerMobile {
+    display: block;
+    position: relative;
+    margin-left: 50%;
+    transform: translateX(-50%) translateY(-80px);
 }
 
-@keyframes yourJoeFrames {
-    to{
-        transform: translateY(0px);
-        opacity: 1;
-    }
-}
 
-.creamAndSugar{
-    opacity: 0;
-    animation: fadeEffect 1s 2s ease forwards;
-}
-
-.enjoy{
-    opacity: 0;
-    animation: fadeEffect 1s 3.3s ease forwards;
-}
 
 @keyframes fadeEffect {
     to{
@@ -295,13 +290,19 @@ input:checked + .slider:before {
 }
 
 
+.containerMobile {
+    display: block;
+    position: relative;
+    margin-left: 50% !important;
+    transform: scale(.66) translateX(45px) !important;
+}
 
 .container {
     display: table;
-    position: absolute;
+    position: relative !important;
     width: 220px !important;
     height: 420px !important;
-    transform: scale(0.75) translateY(-80px);
+    transform: scale(.66) translateY(-80px);
 }
 
 .steamContainer {
@@ -322,15 +323,15 @@ input:checked + .slider:before {
 }
 
 .steam1 {
-    left: 15%;
+    left: 15% !important;
     animation: steamFrames 1.1s infinite ease-in-out alternate;
 }
 .steam2 {
-    left: 50%;
+    left: 50% !important;
     animation: steamFrames 1.63s infinite ease-in-out alternate;
 }
 .steam3 {
-    left: 85%;
+    left: 85% !important;
     animation: steamFrames 1.3s infinite ease-in-out alternate;
 }
 
