Added cookie warninig.

--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ main {
     width: 100% !important;
 }
 
+.xButton {
+    background-color: transparent;
+    border: none;
+}
+
 
 #rowOfCards {
     padding-top: 2%;
