Added cookie warninig.

--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ main {
 }
 
 .xButton {
-    background-color: transparent;
-    border: none;
+    background-color: transparent !important;
+    border: none !important;
 }
 
 
