--- a/style.css
+++ b/style.css
@@ -167,12 +167,25 @@ img {
     padding: 10px;
 }
 
-
-
 .card {
-    border-radius: 5% !important;
+    border-radius: 8px !important;
+    margin: 20px;
 }
 
+.card-text {
+    overflow: scroll;
+}
+
+.card-button {
+    position: absolute;
+    bottom: 2.2em;
+}
+
+.ukraine-img {
+    height: 430px;
+    width: 430px;
+    object-fit: cover;
+}
 
 
 
