I'm not good at formatting things with bootstrap. I fixed the columns for mobile by changing them to col-sm

--- a/style.css
+++ b/style.css
@@ -178,8 +178,9 @@ img {
 }
 
 .ukraine-img {
-    height: 620px;
-    width: 620px;
+    height: 600px;
+    width: 600px;
+    overflow: hidden;
     object-fit: cover;
 }
 
