--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0; 
     padding: 0; 
+    --center: translate(-50%, -50%)
 }
 
 main {
@@ -111,6 +112,14 @@ img {
     padding: 10px;
 }
 
+
+.repos-container {
+    display: flex;
+    position: relative;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+}
 
 
 
