--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,25 @@ footer {
     padding: 2%;
 }
 
+
+.the-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    gap: 20px;
+}
+
+.the-row {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    flex-flow: row;
+    justify-content: space-around;
+}
+
+
+
 #welcomeText {
     font-size: 2em;
     text-align: center;
